--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
-VITE_BASE_ROUTE=/wordpress/
-VITE_WP_REST_URL=http://localhost/wordpress/wp-json/
+VITE_BASE_ROUTE=/
+VITE_WP_REST_URL=http://localhost:8080/wp-json
