--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,10 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "extends": "@tsconfig/node22/tsconfig.json",
   "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*"],
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
+    "moduleResolution": "Bundler",
     "types": ["node"]
   }
 }
